Styling fixes for dark mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,11 +12,11 @@ hr { border-style: dashed; color: #ddd; }
 
 /* header and footer areas */
 header a { border-bottom: none; }
-.site-title { font-size: 56px; text-align: center; }
+.site-title { font-size: 56px; text-align: center; font-family: serif; }
 h1.site-title a  { color: initial; text-decoration: none; }
 .menu { padding: 0; }
 .menu li { display: inline-block; margin: 5px auto; }
-.article-meta, .menu a { position: relative; padding: 5px 7px; font-size: 13px; line-height: 1; font-weight: 500; letter-spacing: .5px; border-radius: 3px; text-transform: uppercase; }
+.article-meta, .menu a { position: relative; padding: 5px 7px; line-height: 1; font-weight: 500; letter-spacing: .5px; border-radius: 3px; text-transform: uppercase; }
 .article-meta, .menu a:hover { color: #17181e; background-color: #ffe66a; }
 .menu, .article-meta, footer { text-align: center; }
 h1, a.title { font-size: 32px; }
@@ -33,15 +33,15 @@ pre {
   padding: 1em;
   overflow-x: auto;
 }
-code { background: #f9f9f9; }
+code { background: #ffe66a; }
 pre code { background: none; }
 
 /* misc elements */
 img, iframe, video { max-width: 100%; }
 main { hyphens: auto; }
 blockquote {
-  background: #f9f9f9;
-  border-left: 5px solid #ccc;
+  background: #ffe66a80;
+  border-left: 5px solid #ffe66a;
   padding: 3px 1em 3px;
   margin-left: auto;
 }
@@ -64,8 +64,9 @@ thead, tfoot, tr:nth-child(even) { background: #eee; }
 
 @media(prefers-color-scheme: dark) {
   body { background-color: #27272A; color: #eee; }
-  h1.site-title a {color: #eee;}
+  h1.site-title a, pre code {color: #eee;}
   a { color: #fff; }
-  blockquote, th, tr:nth-child(2n), .article-meta a { color: #27272A; }
+  blockquote, th, tr:nth-child(2n), code, .article-meta a { color: #27272A; }
+  blockquote { background: #ffffe0; }
   pre{ box-shadow: 5px 5px 5px #27272a; }
 }
